--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 		<head>
 			<title>TBD Capital</title>
 			<link rel="preconnect" href="https://cdn.jsdelivr.net"/>
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png"/>
-			<link rel="manifest" href="/assets/site.webmanifest"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/www/assets/apple-touch-icon.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/www/assets/favicon-32x32.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/www/assets/favicon-16x16.png"/>
+			<link rel="manifest" href="/www/assets/site.webmanifest"/>
 			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&display=swap" rel="stylesheet">
 			<meta charset="UTF-8"/>
 			<meta
