--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<body class="antialiased bg-gray-50 dark:bg-neutral-900 font-inter">
 			<div class="min-h-screen flex flex-col justify-center items-center px-4">
 				<div class="text-center">
-					<h1 class="uppercase text-5xl font-light tracking-wide sm:text-9xl text-gray-800 dark:text-neutral-200 leading-[1.4]">
+					<h1 class="uppercase text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-light tracking-wide text-gray-800 leading-[1.2]">
 						TBD Capital
 					</h1>
 					<p class="mt-4 text-lg text-gray-500 dark:text-gray-400">
