--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<body class="antialiased bg-gray-50 dark:bg-neutral-900 font-inter">
 			<div class="min-h-screen flex flex-col justify-center items-center px-4">
 				<div class="text-center">
-					<h1 class="uppercase text-7xl sm:text-8xl md:text-8xl lg:text-9xl font-light tracking-wide text-gray-800 leading-[1.2]">
+					<h1 class="uppercase text-7xl sm:text-8xl md:text-8xl lg:text-9xl font-light tracking-wide text-gray-800 dark:text-gray-400 leading-[1.2]">
 						TBD Capital
 					</h1>
 					<p class="mt-4 text-lg text-gray-500 dark:text-gray-400">
 						A privately held company focused on long-term value.
 					</p>
-					<footer class="mt-10 text-sm text-gray-400">
+					<footer class="mt-10 text-sm text-gray-400 dark:text-gray-500">
 						&copy; 2025 TBD Capital. All rights reserved.
 					</footer>
 				</div>
